<resources>
    <string name="app_name">PCAS</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">SETTINGS</string>
    <string name="action_about">ABOUT</string>
    <string name="action_logout">LOG OUT</string>
    <string name="action_exit">EXIT</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Full name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Full name</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="email">Email</string>
    <string name="action_sign_in_short">Register</string>
    <string name="banner_home_footer">ca-app-pub-3940256099942544/6300978111</string>
</resources>
